[package]
name = "libdmg_rust"
version = "0.1.0"
authors = ["Michael Ford <fanquake@gmail.com>"]
edition = "2018"
homepage = "https://github.com/fanquake/libdmg_rust"
readme = "README.md"
repository = "https://github.com/fanquake/libdmg_rust"
categories = ["command-line-utilities"]
description = "Inspect and create DMG files."
keywords = ["DMG"]

[dependencies]
base64 = "0.10.1"
structopt = "0.2"
xmltree = "0.8"
